--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -977,8 +977,17 @@ section.traffic_patrol .traffic_patrol_slider .garage_model_card {
     width: 100%;
     /*height: 444px;*/
     height: 100%;
-    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px 10px 0 0;
     background: #090909 url("../../img/layout/pages/main/slider/amarok_slide.png") no-repeat bottom center/cover;
+}
+
+.garage_model_card .slid_img .menu_preview-video {
+    display: none;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px 10px 0 0;
 }
 
 .garage_model_card .slid_info {
