--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -364,14 +364,14 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     opacity: 0.3;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%);
     bottom: 0; /* Используем CSS переменную для изменения свойства top */
-    right: 0; /* Используем CSS переменную для изменения свойства right */
+    right: -25%; /* Используем CSS переменную для изменения свойства right */
 }
 
 .menu:after {
     opacity: 0.3;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #2BFC7F 0%, rgba(9, 9, 9, 0.00) 100%);
     top: 0; /* Используем CSS переменную для изменения свойства top */
-    left: 0; /* Используем CSS переменную для изменения свойства right */
+    left: -25%; /* Используем CSS переменную для изменения свойства right */
 }
 
 .menu .container_main {
@@ -745,7 +745,7 @@ section.traffic_patrol:before {
     position: absolute;
     width: 600px;
     height: 600px;
-    z-index: 2;
+    /*z-index: 2;*/
     pointer-events: none;
     top: var(--before-top, 0); /* Используем CSS переменную для изменения свойства top */
     right: var(--before-right, 0); /* Используем CSS переменную для изменения свойства right */
@@ -1036,7 +1036,7 @@ section.situation_centre:before {
     position: absolute;
     width: 600px;
     height: 600px;
-    z-index: 2;
+    /*z-index: 2;*/
     pointer-events: none;
     top: var(--before-top, 0); /* Используем CSS переменную для изменения свойства top */
     right: var(--before-right, 0); /* Используем CSS переменную для изменения свойства right */
@@ -1245,7 +1245,7 @@ section.help_desk:before {
     position: absolute;
     width: 600px;
     height: 600px;
-    z-index: 2;
+    /*z-index: 2;*/
     pointer-events: none;
     top: var(--before-top, 0); /* Используем CSS переменную для изменения свойства top */
     right: var(--before-right, 0); /* Используем CSS переменную для изменения свойства right */
