--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -357,21 +357,21 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     border-radius: 100%;
     opacity: 0.3;
     pointer-events: none;
-    transition: top 4s ease, right 4s ease, bottom 4s ease, left 4s ease; /* Добавляем анимацию перемещения через свойства top и right */
+    transition: all 4s ease;
 }
 
 .menu:before {
-    opacity: 0.3;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%);
-    bottom: 0; /* Используем CSS переменную для изменения свойства top */
-    right: -25%; /* Используем CSS переменную для изменения свойства right */
+    /*right: -25%;*/
+    right: 0;
+    animation: movingTopBottom 8s linear infinite;
 }
 
 .menu:after {
-    opacity: 0.3;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #2BFC7F 0%, rgba(9, 9, 9, 0.00) 100%);
-    top: 0; /* Используем CSS переменную для изменения свойства top */
-    left: -25%; /* Используем CSS переменную для изменения свойства right */
+    /*left: -25%;*/
+    left: 0;
+    animation: movingBottomTop 8s linear infinite;
 }
 
 .menu .container_main {
