--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -1109,6 +1109,7 @@ section.situation_centre:before {
     width: 600px;
     height: 600px;
     /*z-index: 2;*/
+    z-index: -1;
     pointer-events: none;
     top: var(--before-top, 0); /* Используем CSS переменную для изменения свойства top */
     right: var(--before-right, 0); /* Используем CSS переменную для изменения свойства right */
@@ -1318,6 +1319,7 @@ section.help_desk:before {
     width: 600px;
     height: 600px;
     /*z-index: 2;*/
+    z-index: -1;
     pointer-events: none;
     top: var(--before-top, 0); /* Используем CSS переменную для изменения свойства top */
     right: var(--before-right, 0); /* Используем CSS переменную для изменения свойства right */
