--- a/src/style/style.css
+++ b/src/style/style.css
@@ -450,6 +450,8 @@ a-scene {
 }
 
 .auto_park .container {
+    display: flex;
+    justify-content: center;
     position: relative;
     z-index: 1;
 }
@@ -461,6 +463,8 @@ a-scene {
     border-radius: 12px;
     height: 224px;
     padding: 20px;
+    width: min-content;
+    max-width: 100%;
 }
 
 .auto_park__control {
